# analysis-demo

./: .gitignore  README.md  install.sh  pyproject.toml
jsr/: app.py
jsr/.streamlit/: config.toml
jsr/pages/: description.py  page_operator.py  page_operator_timeline.py  page_shipment.py  page_transaction_overview.py
jsr/plotting/: plot_shipments.py  plot_transactions.py
jsr/streamlit_components/: components_general.py  components_operator.py  components_shipment.py
jsr/utils/: col_namespace.py  plotting.py  processing.py
notebooks/: shift_analysis.ipynb  shipment_analysis.ipynb  transaction_analysis.ipynb
