[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-demo"
dynamic = ["version"]
dependencies = [
    "jupyterlab",
    "plotly",
    "kaleido",
    "scipy",
    "pandas",
    "polars",
    "ipykernel",
    "numpy",
    "nbformat",
    "streamlit",
    "scikit-learn",
    "sktime"
]

[tool.setuptools]
packages = ["jsr"]
